# adbudget

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: main.py  pyproject.toml
backend/app/api/graphql/: schema.py
backend/app/core/: config.py  database.py
backend/app/models/: campaign.py
frontend/: codegen.ts  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CampaignForm.tsx  CampaignList.tsx
frontend/src/graphql/: queries.ts
